tests/fail/expr/repeat.rs
fn main() {
    one_assert::assert!([false; 3]);
    one_assert::assert!([1; 3]);
}
