tests/fail/expr/repeat.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/repeat.rs:2:25
  |
2 |     one_assert::assert!([false; 3]);
  |                         ^^^^^^^^^^ expected `bool`, found `[bool; 3]`

error[E0308]: mismatched types
 --> tests/fail/expr/repeat.rs:3:25
  |
3 |     one_assert::assert!([1; 3]);
  |                         ^^^^^^ expected `bool`, found `[{integer}; 3]`
